# footprint

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
kubernetes/: example-dummy.yaml  example-sewio-uwb.yaml  gateway.yaml
pipe/: Cargo.toml
pipe/src/: main.rs
provider/api/: Cargo.toml
provider/api/src/: lib.rs
provider/dummy/: Cargo.toml
provider/dummy/src/: lib.rs
provider/sewio-uwb/: Cargo.toml
provider/sewio-uwb/src/: lib.rs
server/: Cargo.toml
server/gateway/: Cargo.toml
server/gateway/src/: main.rs
server/provider/: Cargo.toml
server/provider/src/: main.rs
server/src/: main.rs
