[workspace]
default-members = ["cli"]
members = ["api", "cli", "client", "provider/api", "provider/dummy", "server"]

[workspace.dependencies]
actix-web = { version = "4.3", default-features = false, features = [
    "macros",
    "rustls",
] }
actix-web-prom = { version = "0.6" }
anyhow = { version = "1.0", features = ["backtrace"] }
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git" }
chrono = { version = "0.4" }
clap = { version = "4.1", features = ["derive", "env"] }
lazy_static = { version = "1.4" }
prometheus = { version = "0.13" }
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
schemars = { version = "0.8", features = ["chrono", "derive", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.28", features = ["macros", "rt"] }
