[workspace]
default-members = ["cli"]
members = [
    "api",
    "cli",
    "client",
    "provider/api",
    "provider/dummy",
    "provider/sewio-uwb",
    "server/gateway",
    "server/provider",
]
resolver = "2"

[workspace.dependencies]
actix-cors = { version = "=0.6" }
actix-web = { version = "=4.4", default-features = false, features = [
    "macros",
    "rustls",
] }
actix-web-prom = { version = "=0.7" }
anyhow = { version = "=1.0", features = ["backtrace"] }
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git" }
chrono = { version = "=0.4" }
clap = { version = "=4.4", features = ["derive", "env"] }
futures = { version = "=0.3" }
lazy_static = { version = "=1.4" }
prometheus = { version = "=0.13" }
rand = { version = "=0.8" }
rand_distr = { version = "=0.4" }
reqwest = { git = "https://github.com/ulagbulag/reqwest-wasm.git", package = "reqwest-wasm", version = "=0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
schemars = { version = "=0.8", features = ["chrono", "derive", "uuid1"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = { version = "=1.0" }
tokio = { version = "=1.32", default-features = false, features = [
    "macros",
    "rt",
] }
