[package]
name = "footprint-pipe"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Real-time Location Information Collection of Heterogeneous Physical Resources "
documentation = "https://docs.rs/footprint-server-provider"
license = "GPL-3.0-or-later"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dummy", "put", "sewio-uwb"]
put = []

# Providers
dummy = ["footprint-provider-dummy"]
sewio-uwb = ["footprint-provider-sewio-uwb"]

[dependencies]
footprint-api = { path = "../api" }
footprint-provider-api = { path = "../provider/api" }
footprint-provider-dummy = { path = "../provider/dummy", optional = true, features = [
    "metrics",
] }
footprint-provider-sewio-uwb = { path = "../provider/sewio-uwb", optional = true, features = [
    "websocket",
] }

actix-web = { workspace = true }
actix-web-prom = { workspace = true }
anyhow = { workspace = true }
ark-core = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
dash-pipe-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
