[package]
name = "footprint-provider-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Real-time Location Information Collection of Heterogeneous Physical Resources "
documentation = "https://docs.rs/footprint-provider-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["metrics"]
metrics = ["prometheus"]

[dependencies]
footprint-api = { path = "../../api" }

lazy_static = { workspace = true }
prometheus = { workspace = true, optional = true }
