[package]
name = "footprint-provider-sewio-uwb"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Real-time Location Information Collection of Heterogeneous Physical Resources "
documentation = "https://docs.rs/footprint-provider-sewio-uwb"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
footprint-api = { path = "../../api" }
footprint-provider-api = { path = "../api", features = ["env"] }

anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
