[package]
name = "footprint-provider-sewio-uwb"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Real-time Location Information Collection of Heterogeneous Physical Resources "
documentation = "https://docs.rs/footprint-provider-sewio-uwb"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metrics = ["footprint-provider-api/metrics", "reqwest"]
websocket = ["futures", "serde_json", "tokio", "tungstenite"]

[dependencies]
footprint-api = { path = "../../api" }
footprint-provider-api = { path = "../api", features = ["env"] }

anyhow = { workspace = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["net", "sync"] }
tungstenite = { workspace = true, optional = true }
url = { workspace = true }
